# fraud-cryptocurrency-codebases

./: .gitignore  BTC.csv  ChangeLog.md  LICENSE  Makefile  README.md  crypto-fraud.cabal  gather.pbs  gather.pbs.o719417  hypotheses.txt  log.txt  mods  notes.txt  package.yaml  repo-pairs.csv  run-hyp2.pbs  run-hyp3.pbs  run.pbs  run1.pbs  run2.pbs  run3.pbs  run4.pbs  run5.pbs  run6.pbs  run7.pbs  run8.pbs  run_code_analysis.pbs  stack.yaml  tmp.txt  values.csv
app/: Main.hs
code_analysis/: Cargo.toml  tmp.txt
code_analysis/misc/: extracode.txt  repos.csv  simple.bc  simple.cpp  simple.json  simple.ll  simple2.bc  simple2.json  simple2.ll  tmp.ast
code_analysis/src/: ast_cpp.rs  main.rs  scrape.rs  util.rs
data/: Achain-BitBay.csv  Achain-BitcoinDiamond.csv  Achain-GameCredits.csv  Achain-GraftNetwork.csv  Achain-LEOcoin.csv  Achain-UlordChain.csv  Achain-bitcoin-abc.csv  Achain-bitcoin-sv.csv  Achain-bitcoin.csv  Achain-bitshares-core.csv  Achain-bluzelle.csv  Achain-bytecoin.csv  Achain-clams.csv  Achain-dero.csv  Achain-dogecoin.csv  Achain-einsteinium.csv  Achain-electroneropulse.csv  Achain-gulden-official.csv  Achain-loki.csv  Achain-manna-legacy.csv  BTC-new.csv  BTC.csv  BTCGPU-BitBay.csv  BTCGPU-BitcoinDiamond.csv  BTCGPU-Core-Smart.csv  BTCGPU-GameCredits.csv  BTCGPU-GraftNetwork.csv  BTCGPU-GroestlCoin.csv  BTCGPU-LEOcoin.csv  BTCGPU-PIVX.csv  BTCGPU-TOSC.csv  BTCGPU-UlordChain.csv  BTCGPU-XSN.csv  BTCGPU-beam.csv  BTCGPU-bitshares-core.csv  BTCGPU-blocknet.csv  BTCGPU-clams.csv  BTCGPU-deeponion.csv  BTCGPU-dero.csv  BTCGPU-digibyte.csv  (+1511 more)
misc/: c99.y  (+31 more)
(+32 files in other folders)
