[package]
name = "code_analysis"
version = "0.1.0"
authors = ["Keira Haskins <wasp@unm.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = "0.5"
csv = "1"
serde = "1"
serde_derive = "1"
walkdir = "2"
sha2 = "0.8.0"
data-encoding = "2.1.2"
ring = "0.16.9"
